force-app/main/default/objects/Case/fields/Has_work_stopped__c.field-meta.xml
<CustomField>
    <fullName>Has_work_stopped__c</fullName>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>Has work stopped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>