force-app/main/default/objects/Case/fields/IAA_Requested_to_Pay_Advance_Charges__c.field-meta.xml
<CustomField>
    <fullName>IAA_Requested_to_Pay_Advance_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAA Requested to Pay Advance Charges?</label>
    <type>Checkbox</type>
</CustomField>