force-app/main/default/objects/Case/fields/If_Buyer_did_not_use_local_tow_why__c.field-meta.xml
<CustomField>
    <fullName>If_Buyer_did_not_use_local_tow_why__c</fullName>
    <label>If Buyer did not use local tow why?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Did_Buyer_Use_Local_Tow__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Not fast enough delivery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>