force-app/main/default/objects/Case/fields/Is_Activity_Captured__c.field-meta.xml
<CustomField>
    <fullName>Is_Activity_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Activity Captured</label>
    <type>Checkbox</type>
</CustomField>