force-app/main/default/objects/Case/fields/isBrokerCase__c.field-meta.xml
<CustomField>
    <fullName>isBrokerCase__c</fullName>
    <description>this is to check the case is created for broker Account.</description>
    <formula>IF( OR(Account.RecordType.DeveloperName = &apos;Broker_Account&apos;, Account.Parent.RecordType.DeveloperName = &apos;Broker_Account&apos;), true, false)</formula>
    <label>isBrokerCase</label>
    <type>Checkbox</type>
</CustomField>