force-app/main/default/objects/Case/fields/KAR_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>KAR_Closed_Date__c</fullName>
    <label>KAR Closed Date</label>
    <type>DateTime</type>
</CustomField>