force-app/main/default/objects/Case/fields/KAR_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>KAR_Open_Date__c</fullName>
    <label>KAR Open Date</label>
    <type>DateTime</type>
</CustomField>