force-app/main/default/objects/Case/fields/Language_for_Skill_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Language_for_Skill_Mapping__c</fullName>
    <label>Language for Skill Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alabanian</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Farsi</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Georgian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Lithuanian</fullName>
            </value>
            <value>
                <fullName>Moldavian</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Romanian</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Ukrainian</fullName>
            </value>
            <value>
                <fullName>Urdu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>