force-app/main/default/objects/Case/fields/Location_for_Skill_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Location_for_Skill_Mapping__c</fullName>
    <label>Location for Skill Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Defined</fullName>
                <default>true</default>
                <label>Not Defined</label>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Curacao</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Great Britain</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Jordan</fullName>
            </value>
            <value>
                <fullName>Libyan Jamahiriya</fullName>
            </value>
            <value>
                <fullName>Lithuania</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>Oman</fullName>
            </value>
            <value>
                <fullName>Panama Rep</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Senegal</fullName>
            </value>
            <value>
                <fullName>Ukraine</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>Virgin Islands</fullName>
            </value>
            <value>
                <fullName>Yemen</fullName>
            </value>
            <value>
                <fullName>CA - AB</fullName>
                <isActive>false</isActive>
                <label>CA - AB</label>
            </value>
            <value>
                <fullName>CA - BC</fullName>
                <isActive>false</isActive>
                <label>CA - BC</label>
            </value>
            <value>
                <fullName>CA - MB</fullName>
                <isActive>false</isActive>
                <label>CA - MB</label>
            </value>
            <value>
                <fullName>CA - NB</fullName>
                <isActive>false</isActive>
                <label>CA - NB</label>
            </value>
            <value>
                <fullName>CA - NS</fullName>
                <isActive>false</isActive>
                <label>CA - NS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>