force-app/main/default/objects/Case/fields/medallia_xm__Medallia_Feedback_id__c.field-meta.xml
<CustomField>
    <fullName>medallia_xm__Medallia_Feedback_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link Case to a specific piece of feedback stored in the custom Medallia feedback object</description>
    <label>Medallia - Feedback id</label>
    <referenceTo>medallia_xm__Medallia_Feedback__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>