force-app/main/default/objects/Case/fields/Originating_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Buyer FeedBack</relationshipLabel>
    <relationshipName>Survey_Feedback_case</relationshipName>
    <type>Lookup</type>
</CustomField>