force-app/main/default/objects/Case/fields/Originating_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case_Description__c</fullName>
    <label>Originating Case Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>