force-app/main/default/objects/Case/fields/Originating_Case_Reason_for_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case_Reason_for_Case__c</fullName>
    <formula>TEXT( Originating_Case__r.Reason_for_Case__c )</formula>
    <label>Originating Case Reason for Case</label>
    <type>Text</type>
</CustomField>