force-app/main/default/objects/Case/fields/Originating_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case_Status__c</fullName>
    <formula>TEXT( Originating_Case__r.Status )</formula>
    <label>Originating Case Status</label>
    <type>Text</type>
</CustomField>