force-app/main/default/objects/Case/fields/Originating_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case_Subject__c</fullName>
    <formula>Originating_Case__r.Subject</formula>
    <label>Originating Case Subject</label>
    <type>Text</type>
</CustomField>