force-app/main/default/objects/Case/fields/Originating_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case_Type__c</fullName>
    <formula>TEXT(Originating_Case__r.Type)</formula>
    <label>Originating Case Type</label>
    <type>Text</type>
</CustomField>