force-app/main/default/objects/Case/fields/Pending_Buyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Pending_Buyer_Number__c</fullName>
    <label>Pending Buyer Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>