force-app/main/default/objects/Case/fields/Previously_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Previously_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Escalated</label>
    <type>Checkbox</type>
</CustomField>