force-app/main/default/objects/Case/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>Primary Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>