force-app/main/default/objects/Case/fields/Provide_any_error_message__c.field-meta.xml
<CustomField>
    <fullName>Provide_any_error_message__c</fullName>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>Steps to Reproduce/Provide any error mes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>