force-app/main/default/objects/Case/fields/Provider_Defined_Max_Auth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Provider_Defined_Max_Auth_Amount__c</fullName>
    <label>Provider Defined Max Auth Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>