force-app/main/default/objects/Case/fields/Provider_SLA_Formula__c.field-meta.xml
<CustomField>
    <fullName>Provider_SLA_Formula__c</fullName>
    <formula>IF(  ISPICKVAL(CRC_Provider_SLA__c, &apos;1 Hour&apos;), 1,  IF( ISPICKVAL(CRC_Provider_SLA__c, &apos;2 Hour&apos;), 2, 24) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider SLA Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>