force-app/main/default/objects/Case/fields/Quoted_Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Pickup_Date_Time__c</fullName>
    <label>Quoted Pickup Date/Time</label>
    <type>DateTime</type>
</CustomField>