force-app/main/default/objects/Case/fields/Reason_for_Case__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Case__c</fullName>
    <label>Reason for Case</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Inquiry</fullName>
                <isActive>false</isActive>
                <label>3rd Party Inquiry</label>
            </value>
            <value>
                <fullName>Account Credit</fullName>
            </value>
            <value>
                <fullName>Account Renewal</fullName>
                <isActive>false</isActive>
                <label>Account Renewal</label>
            </value>
            <value>
                <fullName>Account Review</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>AC Credential Request</fullName>
            </value>
            <value>
                <fullName>Add/Remove Bidders</fullName>
            </value>
            <value>
                <fullName>Adjustments</fullName>
                <isActive>false</isActive>
                <label>Adjustments</label>
            </value>
            <value>
                <fullName>All Other Documents</fullName>
            </value>
            <value>
                <fullName>Archived Stock</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Assignment Verification</fullName>
            </value>
            <value>
                <fullName>Assistance No Longer required</fullName>
            </value>
            <value>
                <fullName>Auction Center - Desktop</fullName>
                <isActive>false</isActive>
                <label>Auction Center - Desktop</label>
            </value>
            <value>
                <fullName>AuctionNow</fullName>
            </value>
            <value>
                <fullName>Auction Rules</fullName>
            </value>
            <value>
                <fullName>Average Salvage Value</fullName>
            </value>
            <value>
                <fullName>Bad Connection</fullName>
            </value>
            <value>
                <fullName>BBB Complaints</fullName>
            </value>
            <value>
                <fullName>Bid Dispute</fullName>
            </value>
            <value>
                <fullName>Bid Log Request</fullName>
            </value>
            <value>
                <fullName>Blank Voicemail</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Branch Connectivity</fullName>
                <isActive>false</isActive>
                <label>Branch Connectivity</label>
            </value>
            <value>
                <fullName>Branch Information - Do Not Use</fullName>
                <isActive>false</isActive>
                <label>Branch Information - Do Not Use</label>
            </value>
            <value>
                <fullName>Branch Title Inquiry</fullName>
                <isActive>false</isActive>
                <label>Branch Title Inquiry</label>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Buyer Credit card</fullName>
                <isActive>false</isActive>
                <label>Buyer Credit card</label>
            </value>
            <value>
                <fullName>Buyer Feedback</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>