force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Account.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>