force-app/main/default/objects/Case/fields/Related_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For registration verification cases - this is the new account requiring verification.</description>
    <inlineHelpText>For registration verification cases - this is the new account requiring verification.</inlineHelpText>
    <label>Related To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>