force-app/main/default/objects/Case/fields/Release_Due_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Release_Due_Datetime__c</fullName>
    <formula>CRC_Assignment_Date_Time__c + ( Provider_SLA_Formula__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Due Datetime</label>
    <type>DateTime</type>
</CustomField>