force-app/main/default/objects/Case/fields/Requested_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Date__c</fullName>
    <inlineHelpText>When would you like this completed by</inlineHelpText>
    <label>Requested By Date</label>
    <type>Date</type>
</CustomField>