force-app/main/default/objects/Case/fields/Residence_At_Home_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Residence_At_Home_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residence At Home Requirement?</label>
    <type>Checkbox</type>
</CustomField>