force-app/main/default/objects/Case/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>medallia_xm__Medallia_Feedback__c</referenceTo>
    <relationshipLabel>Cases (Response)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>