force-app/main/default/objects/Case/fields/SF_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>SF_Team_Notes__c</fullName>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>SF Team Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>