force-app/main/default/objects/Case/fields/SLA_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SLA_Indicator__c</fullName>
    <formula>IF(
	AND( Release_Due_Datetime__c&lt; NOW(),  Is_Activity_Captured__c = false ), IMAGE(&apos;/resource/red&apos;, &apos;Red&apos;, 15, 15), 

	IF(
		AND((( Release_Due_Datetime__c-  NOW() )*24*60) &gt; 0, (( Release_Due_Datetime__c-  NOW() )*24*60) &lt; 30, Is_Activity_Captured__c = false), IMAGE(&apos;/resource/amber&apos;, &apos;Amber&apos;, 15, 15), IMAGE(&apos;/resource/green &apos;, &apos;Green&apos;, 15, 15)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Indicator</label>
    <type>Text</type>
</CustomField>