force-app/main/default/objects/Case/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>