force-app/main/default/objects/Case/fields/Stock_no__c.field-meta.xml
<CustomField>
    <fullName>Stock_no__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;   Id , Stock__r.Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock #</label>
    <type>Text</type>
</CustomField>