force-app/main/default/objects/Case/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Request</fullName>
            </value>
            <value>
                <fullName>Production Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>