force-app/main/default/objects/Case/fields/test1__c.field-meta.xml
<CustomField>
    <fullName>test1__c</fullName>
    <formula>Today()-DATEVALUE(close_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>