force-app/main/default/objects/Case/fields/TFS_User_Story_Field__c.field-meta.xml
<CustomField>
    <fullName>TFS_User_Story_Field__c</fullName>
    <label>TFS User Story Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>