force-app/main/default/objects/Case/fields/TFS_User_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>TFS_User_Story_Status__c</fullName>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>TFS User Story Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>