force-app/main/default/objects/Case/fields/Three_Way_Call_Occured__c.field-meta.xml
<CustomField>
    <fullName>Three_Way_Call_Occured__c</fullName>
    <label>Three Way Call Occured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CWR</fullName>
                <label>3Way Call Occurred With Release</label>
            </value>
            <value>
                <fullName>CWO</fullName>
                <label>3Way Call Occurred Without Release</label>
            </value>
            <value>
                <fullName>CDO</fullName>
                <label>3Way Call Did Not Occur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>