force-app/main/default/objects/Case/fields/Three_Way_Call_Requested__c.field-meta.xml
<CustomField>
    <fullName>Three_Way_Call_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Three Way Call Requested?</label>
    <type>Checkbox</type>
</CustomField>