force-app/main/default/objects/Case/fields/Title_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Title_Indicator__c</fullName>
    <label>Title Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Present</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Missing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>