force-app/main/default/objects/Case/fields/Tower_ID__c.field-meta.xml
<CustomField>
    <fullName>Tower_ID__c</fullName>
    <label>Tower ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>