force-app/main/default/objects/Case/fields/Updated_Advance_Chg_Auth_By_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Updated_Advance_Chg_Auth_By_First_Name__c</fullName>
    <label>Updated Advance Chg. Auth By First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>