force-app/main/default/objects/Case/fields/Updated_Advance_Chg_Auth_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Updated_Advance_Chg_Auth_DateTime__c</fullName>
    <label>Updated Advance Chg. Auth DateTime</label>
    <type>DateTime</type>
</CustomField>