force-app/main/default/objects/Case/fields/Updated_Advance_Chg_Max_Authorized_Amt__c.field-meta.xml
<CustomField>
    <fullName>Updated_Advance_Chg_Max_Authorized_Amt__c</fullName>
    <label>Updated Advance Chg. Max Authorized Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>