force-app/main/default/objects/Case/fields/VO_Status__c.field-meta.xml
<CustomField>
    <fullName>VO_Status__c</fullName>
    <label>VO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAN</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>ACT</fullName>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>