force-app/main/default/objects/Case/fields/VO_Validated__c.field-meta.xml
<CustomField>
    <fullName>VO_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VO Validated?</label>
    <type>Checkbox</type>
</CustomField>