force-app/main/default/objects/Case/fields/Year_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Year_Make_Model__c</fullName>
    <formula>CRC_Year__c + &apos;/&apos; + CRC_Make__c + &apos;/&apos; + Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year/Make/Model</label>
    <type>Text</type>
</CustomField>