force-app/main/default/objects/Case/recordTypes/Buyer_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Buyer_Feedback</fullName>
    <active>true</active>
    <businessProcess>Buyer Feedback</businessProcess>
    <label>Buyer Feedback</label>
</RecordType>