force-app/main/default/objects/Case/recordTypes/Buyer_Services.recordType-meta.xml
<RecordType>
    <fullName>Buyer_Services</fullName>
    <active>true</active>
    <businessProcess>Buyer Services</businessProcess>
    <label>Buyer Services</label>
</RecordType>