force-app/main/default/objects/Case/recordTypes/CRC_Residential.recordType-meta.xml
<RecordType>
    <fullName>CRC_Residential</fullName>
    <active>true</active>
    <businessProcess>CRC Release Assignment</businessProcess>
    <label>CRC Residential</label>
</RecordType>