force-app/main/default/objects/Case/recordTypes/CRC_Storage_Location.recordType-meta.xml
<RecordType>
    <fullName>CRC_Storage_Location</fullName>
    <active>true</active>
    <businessProcess>CRC Release Assignment</businessProcess>
    <label>CRC Storage Location</label>
</RecordType>