force-app/main/default/objects/Case/recordTypes/Guest_Buyer.recordType-meta.xml
<RecordType>
    <fullName>Guest_Buyer</fullName>
    <active>true</active>
    <businessProcess>Buyer Services</businessProcess>
    <description>Used for those how doesn&apos;t have Account in salesforce</description>
    <label>Guest Buyer</label>
</RecordType>