force-app/main/default/objects/Case/recordTypes/Help_Broker_Community.recordType-meta.xml
<RecordType>
    <fullName>Help_Broker_Community</fullName>
    <active>true</active>
    <businessProcess>Help Community</businessProcess>
    <description>This record type is for cases submitted from Help Community or Broker Community</description>
    <label>Help / Broker Community</label>
</RecordType>