force-app/main/default/objects/Case/recordTypes/IAA_Local_Tow.recordType-meta.xml
<RecordType>
    <fullName>IAA_Local_Tow</fullName>
    <active>true</active>
    <businessProcess>Buyer Services</businessProcess>
    <description>track cases related to IAA Local Tow</description>
    <label>IAA Transport</label>
</RecordType>