force-app/main/default/objects/Case/recordTypes/KAR_BS_Case.recordType-meta.xml
<RecordType>
    <fullName>KAR_BS_Case</fullName>
    <active>true</active>
    <businessProcess>Buyer Services</businessProcess>
    <label>KAR BS Case</label>
</RecordType>