force-app/main/default/objects/Case/recordTypes/Remote_Workforce.recordType-meta.xml
<RecordType>
    <fullName>Remote_Workforce</fullName>
    <active>true</active>
    <businessProcess>Remote Workforce</businessProcess>
    <label>Remote Workforce</label>
</RecordType>