force-app/main/default/objects/Case/validationRules/Case_owner_not_queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_owner_not_queue</fullName>
    <active>true</active>
    <description>Case Can&apos;t be closed with queue as the owner</description>
    <errorConditionFormula>AND(
         NOT(ISBLANK(Owner:Queue.Id)),
         ISPICKVAL(Status, &quot;Closed&quot;)
)</errorConditionFormula>
    <errorMessage>Cases can not be closed with a Queue being the owner.</errorMessage>
</ValidationRule>